@@ -1,5 +1,8 @@
 package app.dccan.voice;
 
+import java.net.DatagramPacket;
+import java.net.DatagramSocket;
+import java.rmi.RemoteException;
 import java.util.LinkedList;
 import java.util.List;
 
@@ -7,17 +10,39 @@ import org.mobicents.media.server.impl.dsp.audio.g729.Encoder;
 
 import amneiht.media.NetAudioFormat;
 import amneiht.media.Recorder;
-import net.help.Convert;
-import net.packet.Nrtp.RtpClient;
+import dccan.remote.Remote;
+import dccan.suport.GetList;
+import dccan.suport.Member;
+import net.packet.Nrtp.SendRtp;
 
 public class Record implements Runnable {
 	static final byte[] cmp = new Encoder().process(new byte[160]);// byte to compare
 	private long id, gp;
-	List<byte[]> lp = new LinkedList<byte[]>();
+	LinkedList<byte[]> lp = new LinkedList<byte[]>();
+	String group;
+	List<Member> clp = new LinkedList<Member>();
 
 	public Record(long id, long gp) {
 		this.id = id;
 		this.gp = gp;
+	}
+
+	Remote rmi;
+
+	public List<Member> getMemList(String group) {
+		try {
+			String lop = rmi.chatMember(group);
+			List<Member> lp = GetList.chatMember(lop);
+			synchronized (clp) {
+				clp.clear();
+				clp.addAll(lp);
+			}
+			return lp;
+		} catch (RemoteException e) {
+			// TODO Auto-generated catch block
+			e.printStackTrace();
+		}
+		return null;
 	}
 
 	class Send implements Runnable {
@@ -25,30 +50,34 @@ public class Record implements Runnable {
 		@Override
 		public void run() {
 			// TODO Auto-generated method stub
-			Encoder en = new Encoder();
+			DatagramSocket socket;
 			try {
-				RtpClient rtp = new RtpClient(RtpSystem.inet, gp, id, RtpSystem.key, RtpSystem.rtport);
+				socket = new DatagramSocket();
+
+				Encoder en = new Encoder();
+
+				SendRtp pack = new SendRtp(gp, id, RtpSystem.key);
 				while (RtpSystem.run) {
 					byte[] dat = null;
 					synchronized (lp) {
 						if (!lp.isEmpty())
-							dat = lp.remove(0);
+							dat = lp.removeFirst();
 					}
 					if (dat != null) {
-						byte[] send = en.process(dat);
-						send = Convert.encrypt(send, RtpSystem.key);
-						if (cmp(send))
-							rtp.send(send);
+						byte[] data = en.process(dat);
+						data = pack.send(data);
+						for (Member mp : clp) {
+							DatagramPacket dp = new DatagramPacket(data, data.length, mp.getIna(), mp.getPort());
+							socket.send(dp);
+						}
 					}
 				}
-
-				rtp.close();
 			} catch (Exception e) {
-				// TODO Auto-generated catch block
+
 				e.printStackTrace();
 			}
-		}
 
+		}
 	}
 
 	static boolean cmp(byte[] res) {
@@ -67,7 +96,10 @@ public class Record implements Runnable {
 			while (RtpSystem.run) {
 				if (!RtpSystem.mute) {
 					byte[] rc = rd.getSound(160);
-					lp.add(rc);
+					synchronized (lp) {
+						lp.addLast(rc);
+					}
+
 				}
 			}
 			rd.close();
